<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PracticeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginBottom="16dp"
            android:max="10"
            android:progress="0" />

        <TextView
            android:id="@+id/tvExample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2 × 3 ="
            android:textSize="32sp"/>

        <EditText
            android:id="@+id/etAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_result"
            android:inputType="number"
            android:layout_marginTop="24dp"/>
        <Button
            android:id="@+id/btnCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/tvScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_points"
            android:layout_marginTop="16dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>