<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageButton
            android:id="@+id/btnSettings"
            android:layout_width="61dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/settings"
            android:src="@drawable/outline_apps_24" />

        <!-- LEARNING -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardLearning"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="6dp"
            app:cardBackgroundColor="#B3E5FC">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/learning"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"/>

        </com.google.android.material.card.MaterialCardView>

        <!-- PRACTICE -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardPractice"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="6dp"
            app:cardBackgroundColor="#C8E6C9">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/practice"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"/>

        </com.google.android.material.card.MaterialCardView>

        <!-- TEST -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardTest"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="6dp"
            app:cardBackgroundColor="#D1C4E9">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/test"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center"/>

        </com.google.android.material.card.MaterialCardView>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>